--- a/config-cliff.toml
+++ b/config-cliff.toml
@@ -63,6 +63,7 @@ commit_parsers = [
   { message = "^fix", group = "Fixed" },
   { message = "^chore", group = "Maintenance" },
   { message = "^docs", group = "Documentation" },
+  { message = "^docs(changelog):", skip = true },
   { message = "^refactor", group = "Changed" },
   { message = "^test", group = "Testing" },
   { message = "^perf", group = "Performance" },
