--- a/config-cliff.toml
+++ b/config-cliff.toml
@@ -62,8 +62,8 @@ commit_parsers = [
   { message = "^feat", group = "Added" },
   { message = "^fix", group = "Fixed" },
   { message = "^chore", group = "Maintenance" },
+  { message = "^docs(changelog)", skip = true },
   { message = "^docs", group = "Documentation" },
-  { message = "^docs(changelog):", skip = true },
   { message = "^refactor", group = "Changed" },
   { message = "^test", group = "Testing" },
   { message = "^perf", group = "Performance" },
