--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -27,12 +27,12 @@ jobs:
           config: config-cliff.toml
           args: --verbose
         env:
-          OUTPUT: CHANGELOG.md
+          OUTPUT: ChangeLog.md
 
       - name: Commit updated ChangeLog
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add CHANGELOG.md
-          git commit -m "docs(changelog): update CHANGELOG in Auto Changelog"
+          git add ChangeLog.md
+          git commit -m "docs(changelog): update ChangeLog in Auto Changelog"
           git push
